--- a/telegraph/index.html
+++ b/telegraph/index.html
@@ -28,7 +28,7 @@
           <h2>О нас</h2>
           <p>Мы — компания, посвященная предоставлению первоклассных услуг нашим клиентам.</p>
         </div>
-        <img src="frontend-course\telegraph\img\office.jpg" alt="Обзор компании">
+        <img src="https://img.freepik.com/premium-vector/minimalist-logo-design-any-corporate-brand-business-company_1253202-77511.jpg?semt=ais_hybrid" alt="Обзор компании">
     </section>
     
     <section class="services-section" id="services">
